--- a/pet.html
+++ b/pet.html
@@ -76,28 +76,21 @@
       </div>
     </nav>
     <!-- Hero section -->
-    <!-- <section>
-      <h1>Pamper Your Pet, Because They Deserve the Bes</h1>
-      <p>
-        Discover a world of treats, toys, and essentials handpicked for your
-        furry friends. Shop now and make tails wag with joy!
-      </p>
-      <button>Find a pet</button>
-    </section> -->
+   
     <div
-      class="min-h-[90vh] bg-no-repeat mb-24"
-      style="background-image: url(./assets/cat-big.png)"
+      class="mb-24 relative"
     >
-      <div class="px-44 pt-24">
+    <div class="w-full h-full opacity-0 bg-yellow-400 hover:opacity-20 absolute top-0 left-0 ease-in duration-700 "></div>
+      <div class="px-2 lg:min-h-[90vh] px-44 pt-24 bg-cover bg-no-repeat transition-all" style="background-image: url(./assets/cat-big.png)">
         <div class="max-w-md">
-          <h1 class="mb-5 text-5xl font-bold">
-            Pamper Your Pet, Because They Deserve the Bes
+          <h1 class="mb-5 text-5xl font-bold animate-pulse ">
+            Pamper Your Pet, Because They Deserve the Best.
           </h1>
-          <p class="mb-5">
+          <p class="mb-5 text-gray-400 ">
             Discover a world of treats, toys, and essentials handpicked for your
             furry friends. Shop now and make tails wag with joy!
           </p>
-          <button class="btn btn-warning">Find a pet</button>
+          <button class="btn btn-warning text-gray-800">Find a pet</button>
         </div>
       </div>
     </div>
@@ -106,7 +99,7 @@
       <h2 class="text-2xl mb-10">Browse By Categories</h2>
       <div class="flex justify-between w-full">
         <div
-          class="bg-yellow-400 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
+          class="bg-yellow-100 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
         >
           <img
             class="bg-white rounded-full p-4"
@@ -117,58 +110,58 @@
           <p>3 items</p>
         </div>
         <div
-          class="bg-yellow-400 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
+          class="bg-yellow-100 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
         >
           <img
             class="bg-white rounded-full p-4"
-            src="./assets/dog-cartoon.png"
+            src="./assets/bird-cartoon.png"
             alt="dog"
           />
-          <h3>Dog</h3>
+          <h3>Bird</h3>
           <p>3 items</p>
         </div>
         <div
-          class="bg-yellow-400 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
+          class="bg-yellow-100 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
         >
           <img
             class="bg-white rounded-full p-4"
-            src="./assets/dog-cartoon.png"
+            src="./assets/fish-cartoon.png"
             alt="dog"
           />
-          <h3>Dog</h3>
+          <h3>Fish</h3>
           <p>3 items</p>
         </div>
         <div
-          class="bg-yellow-400 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
+          class="bg-yellow-100 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
         >
           <img
             class="bg-white rounded-full p-4"
-            src="./assets/dog-cartoon.png"
+            src="./assets/mouse-cartoon.png"
             alt="dog"
           />
-          <h3>Dog</h3>
+          <h3>Mouse</h3>
           <p>3 items</p>
         </div>
         <div
-          class="bg-yellow-400 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
+          class="bg-yellow-100 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
         >
           <img
             class="bg-white rounded-full p-4"
-            src="./assets/dog-cartoon.png"
+            src="./assets/rabbit-cartoon.png"
             alt="dog"
           />
-          <h3>Dog</h3>
+          <h3>Rabbit</h3>
           <p>3 items</p>
         </div>
         <div
-          class="bg-yellow-400 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
+          class="bg-yellow-100 flex items-center justify-center py-4 gap-2 flex-col rounded-lg px-8"
         >
           <img
             class="bg-white rounded-full p-4"
-            src="./assets/dog-cartoon.png"
+            src="./assets/cat-cartoon.png"
             alt="dog"
           />
-          <h3>Dog</h3>
+          <h3>Cat</h3>
           <p>3 items</p>
         </div>
       </div>
@@ -205,7 +198,71 @@
             </div>
           </div>
           <div class="bg-white px-10 py-2 flex gap-4 items-center">
-            <img src="./assets/dog-cartoon.png" alt="dog" />
+            <img src="./assets/cat-cartoon.png" alt="dog" />
+            <div class="flex justify-center flex-col">
+              <p>
+                <img
+                  style="display: inline-block; margin-right: 4px"
+                  width="24"
+                  height="24"
+                  src="https://img.icons8.com/emoji/48/star-emoji.png"
+                  alt="star-emoji"
+                /><span>4.5</span>
+              </p>
+              <h4>Pet Bed</h4>
+              <p>$39.99</p>
+            </div>
+          </div>
+          <div class="bg-white px-10 py-2 flex gap-4 items-center">
+            <img src="./assets/mouse-cartoon.png" alt="dog" />
+            <div class="flex justify-center flex-col">
+              <p>
+                <img
+                  style="display: inline-block; margin-right: 4px"
+                  width="24"
+                  height="24"
+                  src="https://img.icons8.com/emoji/48/star-emoji.png"
+                  alt="star-emoji"
+                /><span>4.5</span>
+              </p>
+              <h4>Pet Bed</h4>
+              <p>$39.99</p>
+            </div>
+          </div>
+          <div class="bg-white px-10 py-2 flex gap-4 items-center">
+            <img src="./assets/fish-cartoon.png" alt="dog" />
+            <div class="flex justify-center flex-col">
+              <p>
+                <img
+                  style="display: inline-block; margin-right: 4px"
+                  width="24"
+                  height="24"
+                  src="https://img.icons8.com/emoji/48/star-emoji.png"
+                  alt="star-emoji"
+                /><span>4.5</span>
+              </p>
+              <h4>Pet Bed</h4>
+              <p>$39.99</p>
+            </div>
+          </div>
+          <div class="bg-white px-10 py-2 flex gap-4 items-center">
+            <img src="./assets/rabbit-cartoon.png" alt="dog" />
+            <div class="flex justify-center flex-col">
+              <p>
+                <img
+                  style="display: inline-block; margin-right: 4px"
+                  width="24"
+                  height="24"
+                  src="https://img.icons8.com/emoji/48/star-emoji.png"
+                  alt="star-emoji"
+                /><span>4.5</span>
+              </p>
+              <h4>Pet Bed</h4>
+              <p>$39.99</p>
+            </div>
+          </div>
+          <div class="bg-white px-10 py-2 flex gap-4 items-center">
+            <img src="./assets/fish-cartoon.png" alt="dog" />
             <div class="flex justify-center flex-col">
               <p>
                 <img
@@ -237,71 +294,7 @@
             </div>
           </div>
           <div class="bg-white px-10 py-2 flex gap-4 items-center">
-            <img src="./assets/dog-cartoon.png" alt="dog" />
-            <div class="flex justify-center flex-col">
-              <p>
-                <img
-                  style="display: inline-block; margin-right: 4px"
-                  width="24"
-                  height="24"
-                  src="https://img.icons8.com/emoji/48/star-emoji.png"
-                  alt="star-emoji"
-                /><span>4.5</span>
-              </p>
-              <h4>Pet Bed</h4>
-              <p>$39.99</p>
-            </div>
-          </div>
-          <div class="bg-white px-10 py-2 flex gap-4 items-center">
-            <img src="./assets/dog-cartoon.png" alt="dog" />
-            <div class="flex justify-center flex-col">
-              <p>
-                <img
-                  style="display: inline-block; margin-right: 4px"
-                  width="24"
-                  height="24"
-                  src="https://img.icons8.com/emoji/48/star-emoji.png"
-                  alt="star-emoji"
-                /><span>4.5</span>
-              </p>
-              <h4>Pet Bed</h4>
-              <p>$39.99</p>
-            </div>
-          </div>
-          <div class="bg-white px-10 py-2 flex gap-4 items-center">
-            <img src="./assets/dog-cartoon.png" alt="dog" />
-            <div class="flex justify-center flex-col">
-              <p>
-                <img
-                  style="display: inline-block; margin-right: 4px"
-                  width="24"
-                  height="24"
-                  src="https://img.icons8.com/emoji/48/star-emoji.png"
-                  alt="star-emoji"
-                /><span>4.5</span>
-              </p>
-              <h4>Pet Bed</h4>
-              <p>$39.99</p>
-            </div>
-          </div>
-          <div class="bg-white px-10 py-2 flex gap-4 items-center">
-            <img src="./assets/dog-cartoon.png" alt="dog" />
-            <div class="flex justify-center flex-col">
-              <p>
-                <img
-                  style="display: inline-block; margin-right: 4px"
-                  width="24"
-                  height="24"
-                  src="https://img.icons8.com/emoji/48/star-emoji.png"
-                  alt="star-emoji"
-                /><span>4.5</span>
-              </p>
-              <h4>Pet Bed</h4>
-              <p>$39.99</p>
-            </div>
-          </div>
-          <div class="bg-white px-10 py-2 flex gap-4 items-center">
-            <img src="./assets/dog-cartoon.png" alt="dog" />
+            <img src="./assets/bird-cartoon.png" alt="dog" />
             <div class="flex justify-center flex-col">
               <p>
                 <img
@@ -360,23 +353,23 @@
       <h2 class="text-2xl mb-10">Frequently Asked Questions</h2>
       <div class="mb-4 collapse collapse-plus bg-base-200">
         <input type="radio" name="my-accordion-3" checked="checked" />
-        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+        <div class="collapse-title text-xl font-medium"> What is Our  shop address?</div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>Santinogor , Road:25 House :16 , 2nd Floor , Sherpur Bogura</p>
         </div>
       </div>
       <div class="mb-4 collapse collapse-plus bg-base-200">
         <input type="radio" name="my-accordion-3" />
-        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+        <div class="collapse-title text-xl font-medium">Do you have a selection of pet food?</div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>"Yes, we offer a wide variety of high-quality dog and cat food brands, including options for specific dietary needs like senior, weight management, or sensitive stomachs."  </p>
         </div>
       </div>
       <div class="mb-4 collapse collapse-plus bg-base-200">
         <input type="radio" name="my-accordion-3" />
-        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+        <div class="collapse-title text-xl font-medium">What if I need to return an item?</div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>"We have a return policy where you can exchange or return most items within [specified time frame] with a receipt, provided the product is unused and in original packaging." </p>
         </div>
       </div>
     </section>
@@ -390,20 +383,7 @@
         <button class="btn btn-warning w-max">Subscribe</button>
       </div>
     </section>
-    <!-- <div class="hero bg-base-200 min-h-screen">
-      <div class="hero-content flex-col lg:flex-row">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
-          class="max-w-sm rounded-lg shadow-2xl" />
-        <div>
-          <h1 class="text-5xl font-bold">Get Pawsome News!</h1>
-          <p class="py-6">
-            Exclusive training tips, ticks, product deals and more.</p>
-          <input type="email" placeholder="Enter email...." />
-          <button class="btn btn-primary">Subscribe</button>
-        </div>
-      </div>
-    </div> -->
+   
     <!-- footer  -->
     <footer class="bg-yellow-200 px-44 pt-[270px] mt-[-260px] pb-32 flex justify-between items-end">
       <div class="w-4/12">
