--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <style>
       .adlam-display-regular {
         font-family: "ADLaM Display", serif;
+        font-weight: 200;
       }
     </style>
   </head>
@@ -86,7 +87,7 @@
           <h1 class="mb-5 text-5xl font-bold animate-pulse ">
             Pamper Your Pet, Because They Deserve the Best.
           </h1>
-          <p class="mb-5 text-gray-400 ">
+          <p class="mb-5 text-gray-400 font-light ">
             Discover a world of treats, toys, and essentials handpicked for your
             furry friends. Shop now and make tails wag with joy!
           </p>
@@ -95,7 +96,7 @@
       </div>
     </div>
     <!-- Categories section -->
-    <section class="px-44 mb-8">
+    <section class="px-44 mb-8 font-light">
       <h2 class="text-2xl mb-10">Browse By Categories</h2>
       <div class="flex justify-between w-full">
         <div
@@ -167,13 +168,13 @@
       </div>
     </section>
     <!-- Trending section  -->
-    <section class="px-44 mb-8">
+    <section class="px-44  mb-8">
       <h2 class="text-2xl mb-10">Trending Pet Products</h2>
       <div class="flex gap-6">
         <div class="bg-yellow-100 p-4 min-h-[48vh] w-4/12 relative">
-          <h3 class="text-xl mb-6">T-Shirt For Dogs</h3>
+          <h3 class="text-xl mb-8">T-Shirt For Dogs</h3>
           <p>Discover a world of treats, toys, and essentials handpicked for</p>
-          <button class="btn">Shop Now</button>
+          <button class="btn mt-4">Shop Now</button>
           <img
             class="absolute bottom-0 right-0"
             src="./assets/cute-pet-small.png"
@@ -360,7 +361,7 @@
       </div>
       <div class="mb-4 collapse collapse-plus bg-base-200">
         <input type="radio" name="my-accordion-3" />
-        <div class="collapse-title text-xl font-medium">Do you have a selection of pet food?</div>
+        <div class="collapse-title text-xl font-light">Do you have a selection of pet food?</div>
         <div class="collapse-content">
           <p>"Yes, we offer a wide variety of high-quality dog and cat food brands, including options for specific dietary needs like senior, weight management, or sensitive stomachs."  </p>
         </div>
@@ -391,7 +392,7 @@
           <img src="./assets/logo-header.png" alt="logo" />
           <span>Browse<span class="text-yellow-500">4</span>Pets</span>
         </div>
-        <p>
+        <p font-light  >
           Discover a world of treats, toys, and essentials handpicked for your
           furry friends
         </p>
